Template .env local

--- a/.env.local
+++ b/.env.local
@@ -3,5 +3,5 @@
 SERVER_PORT=
 
 # Database Connection
-# Add your data user from MongoDB to Cluster connection here
+# Add your data user from MongoDB to Cluster connection here or empty for local connection
 MONGODB_URI=mongodb+srv://<username>:<password>@<cluster_name>.cnncote.mongodb.net/apuestasDB
